--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-           background-image: radial-gradient(circle at top left, #a5ff65, #dd2476);
+           background-image: radial-gradient(circle at center,#085d72,#7ed7eb);
         }
         header {
             background-color:  rgb(20, 19, 20);
@@ -17,7 +17,7 @@
             justify-content: center;
             align-items: center;
             margin-bottom: 20px;
-            text-decoration-line: underline;
+            
         }
         .words {
             display: flex;
