--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body {
-           background-image: radial-gradient(circle at center,#085d72,#7ed7eb);
+           background-image: radial-gradient(circle at center,#87CEFA,#0E3386,#00BFFF);
         }
         header {
             background-color:  rgb(20, 19, 20);
@@ -43,6 +43,9 @@
         
         h1 {
             font-size: 50px;
+        }
+        a {
+            color: aliceblue;
         }
         
 
